// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/time-picker/demo/12hours.md correctly 1`] = `
<div>
  <span
    class="ant-time-picker "
  >
    <input
      class="ant-time-picker-input"
      id=""
      placeholder="Select time"
      type="text"
      value=""
    />
    <span
      class="ant-time-picker-icon"
    >
      <i
        aria-label="icon: clock-circle"
        class="anticon anticon-clock-circle ant-time-picker-clock-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#clock-circle"
          />
        </svg>
      </i>
    </span>
  </span>
  <span
    class="ant-time-picker "
  >
    <input
      class="ant-time-picker-input"
      id=""
      placeholder="Select time"
      type="text"
      value=""
    />
    <span
      class="ant-time-picker-icon"
    >
      <i
        aria-label="icon: clock-circle"
        class="anticon anticon-clock-circle ant-time-picker-clock-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#clock-circle"
          />
        </svg>
      </i>
    </span>
  </span>
  <span
    class="ant-time-picker "
  >
    <input
      class="ant-time-picker-input"
      id=""
      placeholder="Select time"
      type="text"
      value=""
    />
    <span
      class="ant-time-picker-icon"
    >
      <i
        aria-label="icon: clock-circle"
        class="anticon anticon-clock-circle ant-time-picker-clock-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#clock-circle"
          />
        </svg>
      </i>
    </span>
  </span>
</div>
`;

exports[`renders ./components/time-picker/demo/addon.md correctly 1`] = `
<span
  class="ant-time-picker "
>
  <input
    class="ant-time-picker-input"
    id=""
    placeholder="Select time"
    type="text"
    value=""
  />
  <span
    class="ant-time-picker-icon"
  >
    <i
      aria-label="icon: clock-circle"
      class="anticon anticon-clock-circle ant-time-picker-clock-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#clock-circle"
        />
      </svg>
    </i>
  </span>
</span>
`;

exports[`renders ./components/time-picker/demo/basic.md correctly 1`] = `
<span
  class="ant-time-picker "
>
  <input
    class="ant-time-picker-input"
    id=""
    placeholder="Select time"
    type="text"
    value=""
  />
  <span
    class="ant-time-picker-icon"
  >
    <i
      aria-label="icon: clock-circle"
      class="anticon anticon-clock-circle ant-time-picker-clock-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#clock-circle"
        />
      </svg>
    </i>
  </span>
</span>
`;

exports[`renders ./components/time-picker/demo/disabled.md correctly 1`] = `
<span
  class="ant-time-picker "
>
  <input
    class="ant-time-picker-input"
    disabled=""
    id=""
    placeholder="Select time"
    type="text"
    value="12:08:23"
  />
  <span
    class="ant-time-picker-icon"
  >
    <i
      aria-label="icon: clock-circle"
      class="anticon anticon-clock-circle ant-time-picker-clock-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#clock-circle"
        />
      </svg>
    </i>
  </span>
  <i
    aria-label="icon: close-circle"
    class="anticon anticon-close-circle ant-time-picker-clear"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#close-circle"
      />
    </svg>
  </i>
</span>
`;

exports[`renders ./components/time-picker/demo/hide-column.md correctly 1`] = `
<span
  class="ant-time-picker "
>
  <input
    class="ant-time-picker-input"
    id=""
    placeholder="Select time"
    type="text"
    value="12:08"
  />
  <span
    class="ant-time-picker-icon"
  >
    <i
      aria-label="icon: clock-circle"
      class="anticon anticon-clock-circle ant-time-picker-clock-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#clock-circle"
        />
      </svg>
    </i>
  </span>
  <i
    aria-label="icon: close-circle"
    class="anticon anticon-close-circle ant-time-picker-clear"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#close-circle"
      />
    </svg>
  </i>
</span>
`;

exports[`renders ./components/time-picker/demo/interval-options.md correctly 1`] = `
<span
  class="ant-time-picker "
>
  <input
    class="ant-time-picker-input"
    id=""
    placeholder="Select time"
    type="text"
    value=""
  />
  <span
    class="ant-time-picker-icon"
  >
    <i
      aria-label="icon: clock-circle"
      class="anticon anticon-clock-circle ant-time-picker-clock-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#clock-circle"
        />
      </svg>
    </i>
  </span>
</span>
`;

exports[`renders ./components/time-picker/demo/size.md correctly 1`] = `
<div>
  <span
    class="ant-time-picker ant-time-picker-large"
  >
    <input
      class="ant-time-picker-input"
      id=""
      placeholder="Select time"
      type="text"
      value="12:08:23"
    />
    <span
      class="ant-time-picker-icon"
    >
      <i
        aria-label="icon: clock-circle"
        class="anticon anticon-clock-circle ant-time-picker-clock-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#clock-circle"
          />
        </svg>
      </i>
    </span>
    <i
      aria-label="icon: close-circle"
      class="anticon anticon-close-circle ant-time-picker-clear"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#close-circle"
        />
      </svg>
    </i>
  </span>
  <span
    class="ant-time-picker "
  >
    <input
      class="ant-time-picker-input"
      id=""
      placeholder="Select time"
      type="text"
      value="12:08:23"
    />
    <span
      class="ant-time-picker-icon"
    >
      <i
        aria-label="icon: clock-circle"
        class="anticon anticon-clock-circle ant-time-picker-clock-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#clock-circle"
          />
        </svg>
      </i>
    </span>
    <i
      aria-label="icon: close-circle"
      class="anticon anticon-close-circle ant-time-picker-clear"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#close-circle"
        />
      </svg>
    </i>
  </span>
  <span
    class="ant-time-picker ant-time-picker-small"
  >
    <input
      class="ant-time-picker-input"
      id=""
      placeholder="Select time"
      type="text"
      value="12:08:23"
    />
    <span
      class="ant-time-picker-icon"
    >
      <i
        aria-label="icon: clock-circle"
        class="anticon anticon-clock-circle ant-time-picker-clock-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#clock-circle"
          />
        </svg>
      </i>
    </span>
    <i
      aria-label="icon: close-circle"
      class="anticon anticon-close-circle ant-time-picker-clear"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#close-circle"
        />
      </svg>
    </i>
  </span>
</div>
`;

exports[`renders ./components/time-picker/demo/suffix.md correctly 1`] = `
<span
  class="ant-time-picker "
>
  <input
    class="ant-time-picker-input"
    id=""
    placeholder="Select time"
    type="text"
    value=""
  />
  <span
    class="ant-time-picker-icon"
  >
    <i
      aria-label="icon: smile"
      class="anticon anticon-smile ant-time-picker-clock-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#smile"
        />
      </svg>
    </i>
  </span>
</span>
`;

exports[`renders ./components/time-picker/demo/value.md correctly 1`] = `
<span
  class="ant-time-picker "
>
  <input
    class="ant-time-picker-input"
    id=""
    placeholder="Select time"
    type="text"
    value=""
  />
  <span
    class="ant-time-picker-icon"
  >
    <i
      aria-label="icon: clock-circle"
      class="anticon anticon-clock-circle ant-time-picker-clock-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#clock-circle"
        />
      </svg>
    </i>
  </span>
</span>
`;
